// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild > test/fixtures/basic.tsx > dev = false > compiler = babel 1`] = `
"// test/fixtures/basic.tsx
import { template as _$template } from "@solidjs/web";
var _tmpl$ = /* @__PURE__ */ _$template(\`<div>Hello World\`);
var Foo = _tmpl$();
var basic_default = Foo;
export {
  basic_default as default
};
"
`;

exports[`esbuild > test/fixtures/basic.tsx > dev = false > compiler = babel 2`] = `undefined`;

exports[`esbuild > test/fixtures/basic.tsx > dev = false > compiler = native 1`] = `
"// test/fixtures/basic.tsx
import { template as _$template } from "@solidjs/web";
var _tmpl$ = /* @__PURE__ */ _$template(\`<div>Hello World\`);
var Foo = _tmpl$();
var basic_default = Foo;
export {
  basic_default as default
};
"
`;

exports[`esbuild > test/fixtures/basic.tsx > dev = false > compiler = native 2`] = `undefined`;

exports[`esbuild > test/fixtures/basic.tsx > dev = true > compiler = babel 1`] = `
"// test/fixtures/basic.tsx
import { template as _$template } from "@solidjs/web";
var _tmpl$ = /* @__PURE__ */ _$template(\`<div>Hello World\`);
var Foo = _tmpl$();
var basic_default = Foo;
export {
  basic_default as default
};
"
`;

exports[`esbuild > test/fixtures/basic.tsx > dev = true > compiler = babel 2`] = `undefined`;

exports[`esbuild > test/fixtures/basic.tsx > dev = true > compiler = native 1`] = `
"// test/fixtures/basic.tsx
import { template as _$template } from "@solidjs/web";
var _tmpl$ = /* @__PURE__ */ _$template(\`<div>Hello World\`);
var Foo = _tmpl$();
var basic_default = Foo;
export {
  basic_default as default
};
"
`;

exports[`esbuild > test/fixtures/basic.tsx > dev = true > compiler = native 2`] = `undefined`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = false > compiler = babel 1`] = `
"// test/fixtures/syntax.tsx
import { template as _$template } from "@solidjs/web";
import { delegateEvents as _$delegateEvents } from "@solidjs/web";
import { createComponent as _$createComponent } from "@solidjs/web";
import { createEffect, createSignal, onCleanup, onSettled, Loading } from "solid-js";
var _tmpl$ = /* @__PURE__ */ _$template(\`<button>+\`);
function Foo(props) {
  const [count, setCount] = createSignal(0);
  onSettled(() => {
    console.log("mounted");
    onCleanup(() => {
      console.log("unmounted");
    });
  });
  createEffect(count, (value) => {
    console.log("count:", value);
  });
  return ["Children:", _$createComponent(Loading, {
    fallback: "loading...",
    get children() {
      return props.children;
    }
  }), (() => {
    var _el$ = _tmpl$();
    _el$._$$click = () => setCount(count() + 1);
    return _el$;
  })()];
}
var syntax_default = Foo;
_$delegateEvents(["click"]);
export {
  syntax_default as default
};
"
`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = false > compiler = babel 2`] = `undefined`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = false > compiler = native 1`] = `
"// test/fixtures/syntax.tsx
import { template as _$template } from "@solidjs/web";
import { createComponent as _$createComponent } from "@solidjs/web";
import { delegateEvents as _$delegateEvents } from "@solidjs/web";
import { createEffect, createSignal, onCleanup, onSettled, Loading } from "solid-js";
var _tmpl$ = /* @__PURE__ */ _$template(\`<button>+\`);
function Foo(props) {
  const [count, setCount] = createSignal(0);
  onSettled(() => {
    console.log("mounted");
    onCleanup(() => {
      console.log("unmounted");
    });
  });
  createEffect(count, (value) => {
    console.log("count:", value);
  });
  return [
    "Children:",
    _$createComponent(Loading, {
      fallback: "loading...",
      get children() {
        return props.children;
      }
    }),
    (() => {
      var _el$ = _tmpl$();
      _el$._$$click = () => setCount(count() + 1);
      return _el$;
    })()
  ];
}
var syntax_default = Foo;
_$delegateEvents(["click"]);
export {
  syntax_default as default
};
"
`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = false > compiler = native 2`] = `undefined`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = true > compiler = babel 1`] = `
"// test/fixtures/syntax.tsx
import { template as _$template } from "@solidjs/web";
import { delegateEvents as _$delegateEvents } from "@solidjs/web";
import { createComponent as _$createComponent } from "@solidjs/web";
import { createEffect, createSignal, onCleanup, onSettled, Loading } from "solid-js";
var _tmpl$ = /* @__PURE__ */ _$template(\`<button>+\`);
function Foo(props) {
  const [count, setCount] = createSignal(0);
  onSettled(() => {
    console.log("mounted");
    onCleanup(() => {
      console.log("unmounted");
    });
  });
  createEffect(count, (value) => {
    console.log("count:", value);
  });
  return ["Children:", _$createComponent(Loading, {
    fallback: "loading...",
    get children() {
      return props.children;
    }
  }, "Loading"), (() => {
    var _el$ = _tmpl$();
    _el$._$$click = () => setCount(count() + 1);
    return _el$;
  })()];
}
var syntax_default = Foo;
_$delegateEvents(["click"]);
export {
  syntax_default as default
};
"
`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = true > compiler = babel 2`] = `undefined`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = true > compiler = native 1`] = `
"// test/fixtures/syntax.tsx
import { template as _$template } from "@solidjs/web";
import { createComponent as _$createComponent } from "@solidjs/web";
import { delegateEvents as _$delegateEvents } from "@solidjs/web";
import { createEffect, createSignal, onCleanup, onSettled, Loading } from "solid-js";
var _tmpl$ = /* @__PURE__ */ _$template(\`<button>+\`);
function Foo(props) {
  const [count, setCount] = createSignal(0);
  onSettled(() => {
    console.log("mounted");
    onCleanup(() => {
      console.log("unmounted");
    });
  });
  createEffect(count, (value) => {
    console.log("count:", value);
  });
  return [
    "Children:",
    _$createComponent(Loading, {
      fallback: "loading...",
      get children() {
        return props.children;
      }
    }, "Loading"),
    (() => {
      var _el$ = _tmpl$();
      _el$._$$click = () => setCount(count() + 1);
      return _el$;
    })()
  ];
}
var syntax_default = Foo;
_$delegateEvents(["click"]);
export {
  syntax_default as default
};
"
`;

exports[`esbuild > test/fixtures/syntax.tsx > dev = true > compiler = native 2`] = `undefined`;
